test/files/neg/quasiquotes_syntaxerrors_qq2.scala
object Test extends App {
  println(s"$")
  println(s"qwe$")
  println(s"$ bar")
  println(s"qwe$ bar")
  println(s"$2")
  println(s"qwe$2")
  println(s"$2  bar")
  println(s"qwe$2 bar")
  println(s"$22")
  println(s"qwe$22")
  println(s"$22 bar")
  println(s"qwe$22 bar")
}